- added missing wx/quantize.h to install
- improved wxScrolledWindow/sizer interaction
- fixed assert (and crash in debug) in wxFileConfigGroup::DeleteSubgroupByName
- fix for deleting entries at root level in wxFileConfig
- wxStopWatch::Start() didn't resume it contrary to the docs
- accept '\r' as delimiter when parsing dates
- fixed duplicate wxFontEncoding values

Unix (GUI):

- fixed the "close" button of dialogs under KDE 3.1
- fixed memory leak in wxMimeTypesManager

wxBase

- compilation with wxUSE_ODBC=1 fixed (dbkeyg.h file was missing in the archive)
- bug in wxDateTime with timezones on systems with tm_gmtoff in struct tm fixed
- fixed bug in wxArray::Shrink() (Seth Manley)

wxGTK:

- added wxEVT_MENU_OPEN event generation
- fixed bug in generic file selector causing incomplete file extensions to
  be appended to filenames with no extension
- added SetSelection implementation for GTK+ 2
- fixed a memory leak in generic wxFileDialog
- implemented wxTextCtrl::Remove/Replace() for GTK2

wxMSW:

- no longer take ampersand into account in wxStaticText::GetBestSize
- set orientation for scrollbar events
- fix for explicit keyword detection (VC++)
- fix for sending event from wxCheckListBox::Check()
- wxCaret::SetSize correction for showing caret
- fix for wxTreeCtrl label editing in wxTR_MULTIPLE mode
- wxFrame::Maximize(FALSE) would maximize the window if
  called before showing it
- use ES_DISABLENOSCROLL to work around the vertical scrollbar bug in
  wxTE_RICH2 text control
- fixes for wxLocale::Init and Borland C++
- Fix for bug whereby owner-drawn buttons didn't draw multiline labels correctly
- Alt-letter didn't switch focus to a spin ctrl following static control with hotkey
- Fix for multiple consecutive groups of radiobuttons

wxMotif:

- don't use stipples in DoDrawText

wxUniv:

- fixed refresh problem when message box is shown

wxMac:

- implement wxExecute with proper callback on Mac OS X

2.4.0
-----

wxMSW:
